crates/uitest/fixtures/ty_check/effect_resolution.snap
---
source: crates/uitest/tests/ty_check.rs
assertion_line: 27
expression: diags
input_file: fixtures/ty_check/effect_resolution.fe
---
error[8-0012]: undefined variable
   ┌─ effect_resolution.fe:27:5
   │
27 │     foo.caller() == owner
   │     ^^^ undefined variable `foo`

error[8-0051]: unresolved effect
  ┌─ effect_resolution.fe:1:34
  │
1 │ contract Mine uses (foo: Foo, x: X, y) {
  │                                  ^ cannot resolve `X` as a type or trait
  │
  = consider defining a type or trait named `X`
  = or bind the effect value with `uses (name: Type)`

error[8-0051]: unresolved effect
  ┌─ effect_resolution.fe:1:37
  │
1 │ contract Mine uses (foo: Foo, x: X, y) {
  │                                     ^ cannot resolve `y` as a type or trait
  │
  = consider defining a type or trait named `y`
  = or bind the effect value with `uses (name: Type)`

error[8-0051]: unresolved effect
   ┌─ effect_resolution.fe:25:9
   │
25 │   uses (foo, owner: Address)
   │         ^^^ cannot resolve `foo` as a type or trait
   │
   = consider defining a type or trait named `foo`
   = or bind the effect value with `uses (name: Type)`

error[8-0053]: unsupported contract effect
  ┌─ effect_resolution.fe:1:26
  │
1 │ contract Mine uses (foo: Foo, x: X, y) {
  │                          ^^^ contract root effect `Evm` does not implement `Foo`
  │
  = contract-scoped trait effects must be implemented by the target `RootEffect` (`Evm`)
